# SymphonyQG-CXL

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
data/: README.md
python/: bindings.cpp  build.sh  requirements.txt  setup.py
reproduce/: README.md  compute_gt.py  indexing.py  ratio.py  run.py  settings.py
reproduce/utils/: avg_distance_ratio.py  beam_size.py  io.py  memory.py
symqglib/: common.hpp  symqglib.hpp
symqglib/index/fastscan/: pack_codes.hpp  scanner.hpp
symqglib/index/qg/: qg.hpp  qg_builder.hpp  quantizer.hpp
symqglib/qg/: qg.hpp  qg_builder.hpp  qg_query.hpp  qg_scanner.hpp
symqglib/quantization/: fastscan_impl.hpp  rabitq.hpp  scanner_backup.hpp
symqglib/space/: bitwise.hpp  l2.hpp  space.hpp  space_common.hpp
symqglib/third/Eigen/: LICENSE
symqglib/third/ffht/: LICENSE  fht_avx.hpp
symqglib/third/ngt/: hashset.hpp
symqglib/third/svs/: array.hpp
symqglib/utils/: buffer.hpp  io.hpp  memory.hpp  rotator.hpp  scalar_quantize.hpp  stopw.hpp  tools.hpp
test/: CMakeLists.txt  indexing.cpp
